# dioxus-test

./: .gitignore  Cargo.toml  Dioxus.toml
public/: tailwind.css
src/: main.rs
src/functions/: get_tweet_data.rs  mod.rs
src/pages/: home.rs  mod.rs  start_tweet_verification.rs
src/utils/: mod.rs
tweets/: 1841191880165347407.json  1841192998442582041.json  463440424141459456.json
