[package]
name = "verifyah"
version = "0.1.0"
authors = ["daniel"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }

dioxus = { version = "0.5", features = ["fullstack", "router"] }

# Debug
dioxus-logger = "0.5.1"
manganis = "0.2.2"
reqwest = { version = "0.12.8", features = ["json"] }
serde_json = "1.0.128"

[features]
default = []
server = ["dioxus/axum"]
web = ["dioxus/web"]
